syntax = "proto3";

package flow;

option go_package = "github.com/vorteil/direktiv/pkg/flow";

message ActionLogRequest {
	optional string instanceId = 1;
	repeated string msg = 2;
}
