syntax = "proto3";

package direktiv_flow;

option go_package = "github.com/direktiv/direktiv/pkg/flow/grpc";

import "google/protobuf/timestamp.proto";

import "pkg/flow/grpc/pagination.proto";

message Variable {
	string name = 1;
	google.protobuf.Timestamp created_at = 2;
	google.protobuf.Timestamp updated_at = 3;
	string checksum = 4;
	int64 size = 5;
	string mimeType = 6;
}

message NamespaceVariableRequest {
	string namespace = 1;
	string key = 2;
}

message NamespaceVariableResponse {
	string namespace = 1;
	string key = 2;
	google.protobuf.Timestamp created_at = 3;
	google.protobuf.Timestamp updated_at = 4;
	string checksum = 5;
	int64 totalSize = 6;
	bytes data = 7;
	string mimeType = 8;
}

message SetNamespaceVariableRequest {
	string namespace = 1;
	string key = 2;
	int64 totalSize = 3;
	bytes data = 4;
	string mimeType = 5;
}

message SetNamespaceVariableResponse {
	string namespace = 1;
	string key = 2;
	google.protobuf.Timestamp created_at = 3;
	google.protobuf.Timestamp updated_at = 4;
	string checksum = 5;
	int64 totalSize = 6;
	string mimeType = 7;
}

message WorkflowVariableRequest {
	string namespace = 1;
	string path = 2;
	string key = 3;
}

message WorkflowVariableResponse {
	string namespace = 1;
	string path = 2;
	string key = 3;
	google.protobuf.Timestamp created_at = 4;
	google.protobuf.Timestamp updated_at = 5;
	string checksum = 6;
	int64 totalSize = 7;
	bytes data = 8;
	string mimeType = 9;
}

message SetWorkflowVariableRequest {
	string namespace = 1;
	string path = 2;
	string key = 3;
	int64 totalSize = 4;
	bytes data = 5;
	string mimeType = 6;
}

message SetWorkflowVariableResponse {
	string namespace = 1;
	string path = 2;
	string key = 3;
	google.protobuf.Timestamp created_at = 4;
	google.protobuf.Timestamp updated_at = 5;
	string checksum = 6;
	int64 totalSize = 7;
	string mimeType = 8;
}

message InstanceVariableRequest {
	string namespace = 1;
	string instance = 2;
	string key = 3;
}

message InstanceVariableResponse {
	string namespace = 1;
	string instance = 2;
	string key = 3;
	google.protobuf.Timestamp created_at = 4;
	google.protobuf.Timestamp updated_at = 5;
	string checksum = 6;
	int64 totalSize = 7;
	bytes data = 8;
	string mimeType = 9;
}

message SetInstanceVariableRequest {
	string namespace = 1;
	string instance = 2;
	string key = 3;
	int64 totalSize = 4;
	bytes data = 5;
	string mimeType = 6;
}

message SetInstanceVariableResponse {
	string namespace = 1;
	string instance = 2;
	string key = 3;
	google.protobuf.Timestamp created_at = 4;
	google.protobuf.Timestamp updated_at = 5;
	string checksum = 6;
	int64 totalSize = 7;
	string mimeType = 8;
}
